Agregar sincronizacion de personas y mejorar mapa
